--- a/xcss.css
+++ b/xcss.css
@@ -44,7 +44,7 @@ body {
 }
 
 .photo {
-  background-image: url("D:/BSSE/BSE 1207 Introduction to Web Development/WWW/images/hiraku.jpg");
+  background-image: url("images/hiraku.jpg");
 }
 
 .educ {
